<resources>
    <string name="app_name">Rift</string>
    <string name="enter_email">Enter Email</string>
    <string name="proceed">Proceed</string>
    <string name="auto_login">Auto Login</string>
    <string name="domain">http://54.218.35.23</string>
    <string name="something_went_wrong">Something went wrong. Please try again!!!</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="check_your_email">Please check your email address for the OTP.</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="currency_format">Current Format</string>
    <string name="your_expense">Total Expense</string>
    <string name="rs_0">Rs. 0</string>
    <string name="add">add</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="spent_on">Spent On?</string>
    <string name="amount">Amount</string>

    <string name="cab_selected_count">%1$d selected</string>
    <string name="action_collapse">Collapse</string>
    <string name="delete">Delete</string>

    <string name="updating">Updating Expanses</string>
    <string name="fetching">Fetching Expenses</string>
    <string name="_0000">Rs. 0</string>
    <string name="login">Login</string>
    <string name="user_registration">User Registration</string>

    <string name="join_group">Join Group</string>
    <string name="add_group">Add Group</string>
    <string name="groupName">Group Name</string>
    <string name="group_purpose">Group Purpose</string>
    <string name="group_registration">Group Registration</string>
    <string name="about">About</string>
    <string name="group">Group</string>
    <string name="personal">Personal</string>
    <string name="save">Save</string>
    <string name="enter_new_email_username">Enter new email/ username</string>
    <string name="exit">Exit Group</string>
    <string name="settle_group">Settle Group</string>
    <string name="avg_expense">Avg. Expense</string>
    <string name="total_expense">Total Expense</string>
    <string name="member_expense">Member Expense</string>
    <string name="settled_expense">Settled Expense</string>
    <string name="settled_by">Settled By</string>
    <string name="history">Group History</string>
    <string name="edit_group">Edit Group</string>
    <string name="enter_new_group_name">Enter New Group Name</string>
    <string name="fields_empty">Fields Cannot Be Empty</string>
    <string name="calendar">calendar</string>
    <string name="arrow">arrow</string>
    <string name="recent_expense">Month Expense</string>
    <string name="clear">clear</string>
    <string name="ok">OK</string>
    <string name="ooops">Oops!!</string>
    <string name="no_internet_connection_found_please_check_your_connection">No Internet Connection Found\n Please Check Your Connection &amp; Try Again</string>

    <string name="personal_data">Tracking the personal expenses is easy with Rift.\nAdd the simple details and enjoy while Rift takes care of your expenses.</string>
    <string name="group_data">Create groups and add your mates, enter your expenses.\nNo more calculation hassle.\nRift handles it for you</string>
    <string name="graph_data">No more stressing out while you track the expenses\nThe graph and pie chart will ease it for you.</string>
    <string name="lets_rift">"Let's Rift !!"</string>
    <string name="rift_2017">Rift 2017</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="about_app">RIFT, an Expense Tracking application, helps you to track your expenses. It too lets you settle the expenses among your friends automatically.</string>
    <string name="refresh_here"><u>Refresh Here!!</u></string>
    <string name="notification">Notification</string>
    <string name="refresh">Tap to Refresh !!</string>
    <string name="swipe_and_refresh">Swipe and Refresh !!!</string>
</resources>
