<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".main.HomeActivity">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/add"
        android:title="@string/add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit_group"
        app:showAsAction="never"/>


    <item
        android:id="@+id/menu_settle"
        android:icon="@drawable/settle_white"
        android:title="@string/settle_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/settle_white"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_history"
        android:title="@string/history"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/exit_white"
        android:title="@string/exit"
        />

</menu>
