<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="10dp">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress_primary"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="visible"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="PacmanIndicator"/>

    <TextView
        android:id="@+id/textView_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/check_your_email"
        android:layout_margin="20dp"/>


    <EditText
        android:id="@+id/editText_otp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:textColor="@android:color/tab_indicator_text"
        android:padding="10dp"/>


    <Button
        android:id="@+id/button_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"/>
</LinearLayout>