<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <EditText
        android:id="@+id/editText_productName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/spent_on"
        android:textColor="@android:color/tab_indicator_text"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_productAmount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:textColor="@android:color/tab_indicator_text"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:padding="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"/>
</LinearLayout>