<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/background_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="30dp">

    <ImageView
        android:id="@+id/imageView_context"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="15dp"

        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"/>


    <TextView
        android:id="@+id/textView_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="17sp"
        android:gravity="center_vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_letsrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/lets_rift"
            android:textColor="@color/color_tab_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:layout_toEndOf="@id/textView_letsrift"
            android:layout_alignParentEnd="true"
            android:textColor="@color/color_tab_4"
            android:textSize="14sp"/>

    </RelativeLayout>
</LinearLayout>