<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/linearlayout_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/white"/>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progress_primary"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="invisible"
            app:indicatorColor="@color/colorPrimary"
            app:indicatorName="PacmanIndicator"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/check_your_email"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp">

            <EditText
                android:id="@+id/editText_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/enter_otp"
                android:inputType="textEmailAddress"
                android:padding="10dp"/>

            <Button
                android:id="@+id/button_proceed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_otp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>